--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.6.7'
-  id 'org.owasp.dependencycheck' version '7.4.1'
+  id 'org.springframework.boot' version '2.6.8'
+  id 'org.owasp.dependencycheck' version '7.3.0'
   id 'com.github.ben-manes.versions' version '0.41.0'
   id 'org.sonarqube' version '3.3'
   id 'idea'
@@ -289,6 +289,7 @@ repositories {
 
 ext {
   log4JVersion = "2.17.0"
+  set('snakeyaml.version', '1.33')
 }
 
 def versions = [
@@ -440,7 +441,7 @@ dependencies {
   smokeTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junitJupiter
   smokeTestRuntime "org.junit.platform:junit-platform-commons:1.8.1"
 
-  smokeTestCompile(group: 'org.yaml', name: 'snakeyaml', version: '1.32') {
+  smokeTestCompile(group: 'org.yaml', name: 'snakeyaml', version: '1.33') {
     force = true
   }
 
